Fixed layout issues in mobile

--- a/public/styles/styles.css
+++ b/public/styles/styles.css
@@ -30,6 +30,7 @@ video {
     transform: translate(-50%, -50%);
     top: 50%;  
     left: 50%;
+    overflow-y: scroll;
 }
 .content-specific {
     position: absolute;
@@ -41,6 +42,7 @@ video {
     transform: translate(-50%, -50%);
     top: 50%;  
     left: 50%;
+    overflow-y: scroll;
 }
 .content-all {
     position: absolute;
@@ -52,6 +54,7 @@ video {
     transform: translate(-50%, -50%);
     top: 50%;  
     left: 50%;
+    overflow-y: scroll;
 }
 .title {
     display: flex;
@@ -114,6 +117,7 @@ h1, h2 {
     border-radius: 20px 20px 0px 0px;
     border-bottom: 1px solid #fef3ea;
     backdrop-filter: blur(15px);
+    -webkit-backdrop-filter: blur(15px);
 }
 .recently-content {
     display: flex;
@@ -127,6 +131,7 @@ h1, h2 {
     height: 100%;
     border-radius: 0px 0px 20px 20px;
     backdrop-filter: blur(15px);
+    -webkit-backdrop-filter: blur(15px);
     overflow-y: scroll;
 }
 .book, .book  img {
@@ -173,12 +178,6 @@ h1, h2 {
 .back-button-allView-header img {
     height: 30px;
 }
-
-
-
-
-
-
 .specific-book > img {
     position: relative;
     top: 80px;
@@ -196,9 +195,6 @@ h1, h2 {
     justify-content: flex-start;
     width: 45%;
 }
-.book-details > img {
-    width: fit-content;
-}
 .book-title {
     font-size: 5rem;
     color: #fef3ea;
@@ -213,6 +209,10 @@ h1, h2 {
 }
 .book-desc {
     color: #fef3ea;
+}
+.star-rating {
+    align-self: flex-start;
+    height: 30px;
 }
 .review {
     display: flex;
@@ -230,6 +230,8 @@ h1, h2 {
     border-radius: 30px 30px 0px 0px;
     border-bottom: 1px solid #fef3ea;
     backdrop-filter: blur(15px);
+    -webkit-backdrop-filter: blur(15px);
+
 }
 .review-buttons {
     display: flex;
@@ -293,11 +295,13 @@ h1, h2 {
     margin-right: 200px;
     background-color: #fef3ea54;
     backdrop-filter: blur(15px);
+    -webkit-backdrop-filter: blur(15px);
     color: #fef3ea;
 }
 .review-wrapper {
     margin-left: 125px;
     margin-right: 125px;
+
 }
 .review-edit {
     display: flex;
@@ -394,6 +398,8 @@ input::placeholder, textarea::placeholder {
     border-radius: 30px 30px 0px 0px;
     border-bottom: 1px solid #fef3ea;
     backdrop-filter: blur(15px);
+    -webkit-backdrop-filter: blur(15px);
+
 }
 .all-books-bar > h1 {
     font-size: 1rem;
@@ -408,6 +414,8 @@ input::placeholder, textarea::placeholder {
     background-color: #fef3ea54;
     border-radius: 0px 0px 30px 30px;
     backdrop-filter: blur(15px);
+    -webkit-backdrop-filter: blur(15px);
+
     width: 100%;
     height: 100%;
 }
@@ -633,6 +641,7 @@ input::placeholder, textarea::placeholder {
 @media (max-width: 650px) {
     .book-section {
         margin-bottom: 20px;
+        margin-top: 200px;
     }
     .book-title {
         font-size: 1.5rem;
@@ -642,7 +651,11 @@ input::placeholder, textarea::placeholder {
     }
     .review-content {
         max-height: 350px;
-     }
+    }
+    .specific-book > img {
+        height: 230px;
+        width: 170px;
+    }
 }
 
 @media (max-width: 630px) {
@@ -650,17 +663,37 @@ input::placeholder, textarea::placeholder {
         font-size: 0.9rem;
     }
 }
-
 @media (max-width: 480px) {
+    .title {
+        margin-bottom: 0;
+    }
+    .heading {
+        font-size: 4rem;
+    }
+    .sub-heading {
+        font-size: 1.5rem;
+    }
+    .browseBtn {
+        height: 50px;
+        width: 180px;
+    }
     .book-section {
         flex-direction: column;
         text-align: center;
         gap: 10px;
         margin-left: 10px;
         margin-right: 10px;
+        margin-top: 240px;
     }
     .specific-book {
         margin-top: 15px;
+    }
+    .specific-book > img {
+        height: 200px;
+        width: 150px;
+    }
+    .book-desc > img {
+        height: 20px;
     }
     .book-details {
         display: flex;
@@ -679,9 +712,13 @@ input::placeholder, textarea::placeholder {
         margin-left: 10px;
         font-size: smaller;
     }
+    .review-desc {
+        height: 100%;
+    }
     .review-wrapper {
         margin-left: 20px;
         margin-right: 20px;
+        height: 100%;
     }
     .review-header {
         height: 100px;
@@ -690,9 +727,12 @@ input::placeholder, textarea::placeholder {
         font-size: 1.3rem;
     }
     .review-content {
-        max-height: 170px;
+        height: 100%;
     }
     .review-edit button > img {
         height: 25px;
+    }
+    .all-books-container {
+        padding-top: 50px;
     }
 }
